third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_unpack_invalid.exp

Diagnostics:
error: cannot return `integer` from a function with result type `bool`
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_invalid.move:34:9
   │
34 │         f1
   │         ^^

error: type `R` is missing required ability `drop` (type was inferred)
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_invalid.move:39:31
   │
10 │     public fun get<V: drop>(self: &T<V>): V {
   │                    - declaration of type parameter `V`
   ·
39 │         let Box { f1, f2 }  = Container::get(&v);
   │                               ^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Box`
   = required by instantiating type parameter `V:drop` of function `get`
